<resources>
    <string name="app_name">UP DESK</string>
    <string name="title_activity_employeer_login">EmployeerLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_oc">Enter OC</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login_to_employer_account">Employer\'s Login</string>
    <string name="login_to_employee_account">Employee\'s Login</string>
    <string name="email">Email</string>
    <string name="password_login">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="log_in">LOG IN</string>
    <string name="create_new_account_login">Create New Account</string>
    <string name="generate_oc">Generate OC.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_employer_chat">Employer_Chat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="type_a_message">Type a message</string>
</resources>