<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivities.EmployeeLoginActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            >
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_employee_account"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="bold"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                android:id="@+id/etEmployeeEmail"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_bg"
                    android:layout_marginTop="10dp"
                    android:padding="15dp"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="4dp"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmployeeOC"
                android:layout_below="@id/etEmployerEmail"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_oc"
                    android:padding="15dp"
                    android:background="@drawable/et_bg"
                    android:singleLine="true"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="4dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                android:id="@+id/etEmployeePassword"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_bg"
                    android:layout_marginTop="10dp"
                    android:padding="15dp"
                    android:hint="@string/password_login"
                    android:drawableStart="@drawable/key"
                    android:drawablePadding="4dp"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="15sp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:padding="7dp"
                android:id="@+id/txtEmployeeForgotPassword"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/framelayout">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:layout_marginTop="10dp"
                    app:cornerRadius="8dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/mtBtnEmployeeLogIn"
                    android:background="@drawable/btn_bg_rc"
                    />
                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:id="@+id/ProgressBarLogin"/>
            </FrameLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtEmployeeCreateAccount"
                android:text="@string/create_new_account_login"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>