<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivities.EmployerSignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="10dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="bold"
                android:id="@+id/txtCreateAccount"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_marginTop="20dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="#666666"
                android:src="@drawable/person"
                app:shapeAppearanceOverlay="@style/RoundedCornerImage"
                android:id="@+id/mtIVPropfilePhoto"
                android:layout_below="@id/txtCreateAccount"
                android:layout_centerHorizontal="true"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add"
                android:background="@drawable/btn_bg_rc"
                android:id="@+id/ibadd"
                android:layout_alignBottom="@id/mtIVPropfilePhoto"
                android:layout_alignRight="@id/mtIVPropfilePhoto"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etName"
                android:layout_below="@id/mtIVPropfilePhoto"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:padding="15dp"
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="4dp"
                    android:background="@drawable/et_bg"
                    android:singleLine="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etMail"
                android:layout_below="@id/etName"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:padding="15dp"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="4dp"
                    android:background="@drawable/et_bg"
                    android:singleLine="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:layout_below="@id/etMail"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:padding="15dp"
                    android:drawableStart="@drawable/key"
                    android:drawablePadding="4dp"
                    android:background="@drawable/et_bg"
                    android:singleLine="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etConfirmPassword"
                android:layout_below="@id/etPassword"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:padding="15dp"
                    android:background="@drawable/et_bg"
                    android:singleLine="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etOC"
                android:layout_below="@id/etConfirmPassword"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_oc"
                    android:padding="15dp"
                    android:background="@drawable/et_bg"
                    android:singleLine="true"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="4dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEmployerGenerateOC"
                android:text="Generate OC"
                android:layout_marginTop="10dp"
                app:cornerRadius="8dp"
                android:layout_below="@id/etOC"
                android:layout_centerHorizontal="true"
                />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnEmployerGenerateOC"
                android:layout_centerHorizontal="true"
                android:id="@+id/framelayout"
                >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mtBtnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    app:cornerRadius="8dp"
                    android:background="@drawable/btn_bg_rc" />
                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:id="@+id/progressBar"
                    />
            </FrameLayout>
            <TextView
                android:id="@+id/txtAlreadyAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@id/framelayout"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@id/txtAlreadyAccount"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</ScrollView>