<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".More.EditProfileActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"

        >

        <TextView
            android:id="@+id/txtEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Edit Profile"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/mtIVPropfilePhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/txtEditProfile"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="#666666"
            android:src="@drawable/person"
            app:shapeAppearanceOverlay="@style/RoundedCornerImage" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/mtIVPropfilePhoto"
         android:layout_centerHorizontal="true"
         android:text="Select profile image"
         android:textColor="#040453"
         android:textStyle="bold"
         android:id="@+id/tvSelectImage"

         />


        <TextView
            android:id="@+id/tvOCDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mtIVPropfilePhoto"
            android:layout_marginTop="50dp"
            android:padding="15dp"
            android:text="OC:"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/tvOC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mtIVPropfilePhoto"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@id/tvOCDisplay"
            android:drawablePadding="4dp"
            android:hint="@string/name"
            android:padding="15dp"
            android:text="OC:xxxx"
            android:textColor="@color/black"
            android:textSize="18sp"

            />

        <View
            android:id="@+id/viewOC"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/tvOC"
            android:background="#F8F7F7"

            />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewOC"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="Name:"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewOC"
            android:layout_toRightOf="@id/tvName"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:drawablePadding="4dp"
                android:hint="@string/name"
                android:padding="15dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/viewName"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/etName"
            android:background="#F8F7F7" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewName"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="Email:"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewName"
            android:layout_toRightOf="@id/tvEmail"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:drawablePadding="4dp"

                android:hint="@string/email_address"
                android:padding="15dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/viewEmail"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/etMail"
            android:background="#F8F7F7" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewEmail"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="Password:"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewEmail"
            android:layout_toRightOf="@id/tvPassword"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:drawablePadding="4dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/viewPassword"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/etPassword"
            android:background="#F8F7F7"
            android:visibility="gone" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:visibility="gone"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true" />


        </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mtBtnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"

                android:backgroundTint="#040453"
                android:text="UPDATE"
                app:cornerRadius="8dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>


    </RelativeLayout>

</ScrollView>